--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/.elixir_ls/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
@@ -27,3 +28,4 @@ authorizir-*.tar
 
 # Local env vars for project
 .envrc
+.vscode/settings.json
