--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "Run Stale Tests",
       "type": "shell",
-      "command": "mix test --only focus && mix test --stale",
+      "command": "mix test --exclude test --include focus && mix test --stale",
       "group": {
         "kind": "test",
         "isDefault": true
